--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
   <!-- First iframe -->
   <div>
-    <iframe src="https://www.fairwayindependentmc.com/locations/washington/fife-2841" width="1200px" height="600px"></iframe>
+    <iframe src="https://fhathefairway.com/" width="1200px" height="600px"></iframe>
   </div>
 
   <!-- Second iframe -->
